# iic-guard

./: .gitignore  LICENSE  MANIFEST.in  README.md  publish.sh  pyproject.toml  setup.py
iic_guard/: c_wrapper.py  config.py  guard.py  main.py
iic_guard/c_src/: iic_guard.c  iic_guard.h
