[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iic-guard"
version = "0.1.0"
authors = [
  { name="Serhat Urtis", email="urtisms@gmail.com" },
]
description = "A daemon to monitor and protect I2C device registers."
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pydantic",
    "pyyaml",
    "python-daemon",
]

[project.urls]
"Homepage" = "https://github.com/serhaturtis/iic-guard"
"Bug Tracker" = "https://github.com/serhaturtis/iic-guard/issues"

[project.scripts]
iic-guard = "iic_guard.main:main" 